objects/SBQQ__Cost__c.object
<CustomObject>
    <customHelpPage>SBQQ__CostHelp</customHelpPage>
    <description>Unit cost for a product in one currency.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cost</label>
    <nameField>
        <displayFormat>COST-{000000}</displayFormat>
        <label>Cost #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>